--- a/Lesson2/app/src/main/res/values/strings.xml
+++ b/Lesson2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Contacts</string>
+    <string name="app_name">Контакты</string>
     <string name="textview5">TextView</string>
     <string name="textview6">TextView</string>
     <string name="textview7">TextView</string>
