--- a/Lesson1/app/src/main/res/values/strings.xml
+++ b/Lesson1/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Lesson1</string>
+    <string name="app_name">Контакты</string>
+    <string name="textview5">TextView</string>
+    <string name="textview6">TextView</string>
+    <string name="textview7">TextView</string>
+    <string name="textview8">TextView</string>
 </resources>
