--- a/Lesson1/app/src/main/res/values/strings.xml
+++ b/Lesson1/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="description">description</string>
     <string name="ContactListTitle">Cписок контактов</string>
     <string name="ContactDetailsTitle">Детали контакта</string>
+    <string name="NotificationSwitch">Уведомлять о дне рождения</string>
+    <string name="ContactBirthDate">Дата рождения</string>
+    <string name="bDay">Сегодня день рождения празднует </string>
+    <string name="notificationBirthDay">Уведомление о дне рождения</string>
 </resources>
