--- a/Lesson1/app/src/main/res/values/strings.xml
+++ b/Lesson1/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="notificationBirthDay">Уведомление о дне рождения</string>
     <string name="off">Выключено</string>
     <string name="on">Включено</string>
+    <string name="toastContactPermission">Требуется установить разрешение, пожалуйста, перезапустите приложение</string>
 </resources>
